--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Document</title>
+    <title>JS Documentation | Project</title>
   </head>
 
   <!-- Start Script JS -->
