--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   </head>
 
   <body>
+    <!-- Start Header -->
+    <header></header>
+    <!-- End Header -->
+
+    <!-- Start Main -->
+    <main></main>
+    <!-- End Main -->
+
     <!-- Start Script JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
