--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 
   <body>
     <!-- Start Header -->
-    <header></header>
+    <header>
+      <nav class="nav flex-column">
+        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
+          >Disabled</a
+        >
+      </nav>
+    </header>
     <!-- End Header -->
 
     <!-- Start Main -->
