navbar sections with tittles

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <header>
       <nav class="nav flex-column">
         <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Introduction</a>
+        <a class="nav-link" href="#">What you should already know</a>
+        <a class="nav-link" href="#">JavaScript and Java</a>
+        <a class="nav-link" href="#">Hello world</a>
+        <a class="nav-link" href="#">Variables</a>
+        <a class="nav-link" href="#">Declaring variables</a>
+        <a class="nav-link" href="#">Variable scope</a>
       </nav>
     </header>
     <!-- End Header -->
