background to navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
     <!-- Start Header -->
     <header>
-      <nav class="nav flex-column">
+      <nav id="navbar" class="nav flex-column bg-dark bg-gradient">
+        <header>JS Documentation</header>
         <a class="nav-link active" aria-current="page" href="#">Active</a>
         <a class="nav-link" href="#">Introduction</a>
         <a class="nav-link" href="#">What you should already know</a>
