--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
   </head>
 
   <body>
-    <!-- Start Header -->
-    <header>
-      <nav id="navbar" class="nav flex-column bg-dark bg-gradient">
-        <header>JS Documentation</header>
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="#">Introduction</a>
-        <a class="nav-link" href="#">What you should already know</a>
-        <a class="nav-link" href="#">JavaScript and Java</a>
-        <a class="nav-link" href="#">Hello world</a>
-        <a class="nav-link" href="#">Variables</a>
-        <a class="nav-link" href="#">Declaring variables</a>
-        <a class="nav-link" href="#">Variable scope</a>
-      </nav>
-    </header>
-    <!-- End Header -->
+    <!-- Start Navbar -->
+    <nav id="navbar" class="nav flex-column bg-dark bg-gradient">
+      <header>JS Documentation</header>
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+      <a class="nav-link" href="#">Introduction</a>
+      <a class="nav-link" href="#">What you should already know</a>
+      <a class="nav-link" href="#">JavaScript and Java</a>
+      <a class="nav-link" href="#">Hello world</a>
+      <a class="nav-link" href="#">Variables</a>
+      <a class="nav-link" href="#">Declaring variables</a>
+      <a class="nav-link" href="#">Variable scope</a>
+    </nav>
+
+    <!-- End Navbar -->
 
     <!-- Start Main -->
     <main></main>
