Adding links to navbar to active area

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <nav id="navbar" class="nav flex-column bg-dark bg-gradient">
       <header>JS Documentation</header>
       <a class="nav-link active" aria-current="page" href="#">Active</a>
-      <a class="nav-link" href="#">Introduction</a>
-      <a class="nav-link" href="#">What you should already know</a>
-      <a class="nav-link" href="#">JavaScript and Java</a>
-      <a class="nav-link" href="#">Hello world</a>
-      <a class="nav-link" href="#">Variables</a>
-      <a class="nav-link" href="#">Declaring variables</a>
-      <a class="nav-link" href="#">Variable scope</a>
+      <a class="nav-link" href="#Introduction">Introduction</a>
+      <a class="nav-link" href="#What_you_should_already_know"
+        >What you should already know</a
+      >
+      <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+      <a class="nav-link" href="#Hello_world">Hello world</a>
+      <a class="nav-link" href="#Variables">Variables</a>
+      <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+      <a class="nav-link" href="#Variable_scope">Variable scope</a>
     </nav>
     <!-- End Navbar -->
 
