overflow added for responsive

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <!-- Start Navbar -->
     <nav id="navbar" class="nav flex-column bg-dark bg-gradient">
       <header>JS Documentation</header>
-      <a class="nav-link active" aria-current="page" href="#Introduction"
-        >Introduction</a
-      >
+      <a class="nav-link" href="#Introduction">Introduction</a>
       <a class="nav-link" href="#What_you_should_already_know"
         >What you should already know</a
       >
